--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap");
 
 
@@ -7,7 +7,7 @@
     src: url("BOOTERZZ.ttf");
     font-weight: normal;
     font-style: normal;
-}  */
+} 
 
 * {
     box-sizing: border-box;
